<resources>
    <string name="app_name" translatable="false">RedPlate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="home_btn_desc">Home button</string>
    <string name="search_btn_desc">Search button</string>
    <string name="profile_btn_desc">Profile button</string>
    <string name="home">Home</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="input_font" translatable="false">sans-serif-condensed</string>
    <string name="title_2_font" translatable="false">sans-serif-condensed-light</string>
    <string name="title_1_font" translatable="false">sans-serif</string>
    <string name="sign_in">Sign in</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="email">E-mail</string>
    <string name="go_to_login_text">Already have an account?\nLog in</string>
    <string name="go_to_create_account_text">Don\'t have an account?\nSign up</string>
    <string name="log_in">Log in</string>
    <string name="continue_text">Continue</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="or">or</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="username_error_text">Username not valid. Must contain between four and twenty characters.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_error_text">Email introduced is not valid. Check any errors and try again.</string>
    <string name="password_error_text">Password must contain a number, lower case, upper case, special character and at least 8 characters.</string>
    <string name="password_match_error_text">Passwords don\'t match. Please, check them and try again.</string>
    <string name="create_account_error_msg">Error creating the account. Please try again later</string>
    <string name="recover_password_text">Recover your password</string>
    <string name="restore_password_message">When you press continue, you will be sent an email to restore your password.</string>
    <string name="enter_email">Enter your email</string>
    <string name="creating_account">Creating account…</string>
    <string name="logging_in">Logging in…</string>
    <string name="sending_email">Sending email…</string>
    <string name="email_not_found">Email not found.</string>
    <string name="ok">Ok</string>
    <string name="go_back">Go back</string>
    <string name="invalid_credentials">Invalid credentials. Consider recovering your password.</string>
    <string name="loading">Loading…</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_account_banner_message">The email you introduced is already registered.</string>
    <string name="dismiss">Dismiss</string>
    <string name="error_while_signing_in">An error occurred while accessing the account</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="couldnt_open_google_signin_error">Error: could\'nt open Google Sign In screen</string>
    <string name="no_google_accounts_found_error">No Google accounts could be found</string>
    <string name="google_signin_client_id" translatable="false">857893155446-uh4froahs9rr5buv9f1m0tv0hsnp9m3i.apps.googleusercontent.com</string>
    <string name="email_not_verified_title">Email not verified</string>
    <string name="email_not_verified_body_text">In order to access Redplate, you must verify your account email</string>
    <string name="account_created_body_text">A verification email has been sent. You must verify your account in order to be able to log in.</string>
    <string name="verify">Verify</string>
    <string name="ignore">Ignore</string>
    <string name="waiting_for_server">Waiting for server…</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="error_sending_verification_email">Error sending verification email</string>
    <string name="credentials_introduced_not_valid">Credentials not valid. Make sure the email is right and the password is not empty.</string>
    <string name="account_created">Account created</string>
    <string name="my_chats">My chats</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tellus enim. Praesent at diam in dui luctus posuere. Fusce nibh neque, pellentesque id justo ut, auctor finibus orci. Donec tortor diam, vulputate ut nibh sit amet, vehicula auctor augue. Quisque eleifend nisi vitae iaculis venenatis.</string>
    <string name="now">Now</string>
</resources>