<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:clickable="false"
    tools:context=".ui.createAccountLogin.LoginFragment">

    <TextView
        android:id="@+id/redplate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xhigh"
        android:layout_marginTop="@dimen/spacing_xhigh"
        android:fontFamily="@string/title_1_font"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_1"/>

    <TextView
        android:id="@+id/login_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xhigh"
        android:layout_marginTop="@dimen/spacing_high"
        android:fontFamily="@string/title_2_font"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/redplate_label"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_2"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_account_text"
        android:layout_marginHorizontal="@dimen/spacing_xhigh"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/input_bg"
        android:fontFamily="@string/input_font"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingVertical="@dimen/input_edittext_padding"
        android:paddingStart="@dimen/input_padding_start"
        android:paddingEnd="@dimen/input_edittext_padding"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_hint_color"
        android:textSize="@dimen/input_text_size"
        android:elevation="@dimen/spacing_small"
        tools:text="adolfofornas2205@domain.es"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:layout_marginHorizontal="@dimen/spacing_xhigh"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/input_bg"
        android:fontFamily="@string/input_font"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingVertical="@dimen/input_edittext_padding"
        android:paddingStart="@dimen/input_padding_start"
        android:paddingEnd="@dimen/input_edittext_padding"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_hint_color"
        android:textSize="@dimen/input_text_size"
        android:elevation="@dimen/spacing_small"/>

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/spacing_xhigh"
        android:fontFamily="@string/input_font"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/spacing_medium"
        android:text="@string/forgot_password_text"
        android:textColor="@color/input_hint_color"
        android:textSize="@dimen/input_text_size"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xhigh"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/input_bg"
        android:fontFamily="@string/input_font"
        android:paddingVertical="@dimen/button_padding_vertical"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_width"
        android:layout_marginHorizontal="@dimen/spacing_xxhigh"
        android:background="@color/primaryLightColor"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/input_hint_color"
        android:textSize="@dimen/input_text_size"
        android:paddingHorizontal="@dimen/spacing_medium"
        android:background="@color/background_color"
        app:layout_constraintTop_toTopOf="@id/separator"
        app:layout_constraintBottom_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="@id/separator"
        app:layout_constraintEnd_toEndOf="@id/separator"/>

    <TextView
        android:id="@+id/google_login_button"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/log_in_with_google"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="textStart"
        android:drawablePadding="@dimen/spacing_small"
        android:paddingVertical="@dimen/spacing_medium"
        android:fontFamily="@string/input_font"
        android:layout_marginHorizontal="@dimen/spacing_xhigh"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_medium"
        app:drawableStartCompat="@drawable/ic_google"
        android:elevation="@dimen/spacing_small"/>

    <TextView
        android:id="@+id/go_to_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/spacing_small"
        android:text="@string/go_to_create_account_text"
        android:textAlignment="center"
        android:textColor="@color/input_hint_color"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>