<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createAccountLogin.ForgotPasswordFragment"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/redplate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xhigh"
        android:fontFamily="@string/title_1_font"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium_high"
        android:layout_marginTop="@dimen/spacing_xhigh"
        android:background="@drawable/input_panel_bg"
        android:elevation="@dimen/spacing_small"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redplate_label">

        <TextView
            android:id="@+id/recover_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_medium_high"
            android:fontFamily="@string/title_2_font"
            android:text="@string/recover_password_text"
            android:textColor="@color/title_color"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_high"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_email_24"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@string/input_font"
            android:hint="@string/enter_email"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/input_edittext_padding"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/input_edittext_padding"
            android:textColor="@color/input_text_color"
            android:textColorHint="@color/input_hint_color"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="@dimen/input_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_high"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@string/input_font"
            android:textAlignment="center"
            android:paddingVertical="@dimen/input_edittext_padding"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/input_edittext_padding"
            android:textColor="@color/label_hint_color"
            android:text="@string/restore_password_message"
            android:textSize="@dimen/input_text_size" />

        <Button
            android:id="@+id/continue_button"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_high"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/input_bg"
            android:fontFamily="@string/input_font"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/go_back_button"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="@dimen/back_button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:layout_margin="@dimen/spacing_xhigh"
        android:fontFamily="@string/input_font"
        android:padding="@dimen/button_padding_vertical"
        android:text="@string/go_back"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>