<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/verify_dialog_background"
    android:layout_marginHorizontal="@dimen/spacing_xhigh"
    android:paddingTop="@dimen/spacing_medium">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium_high"
        android:text="@string/account_created"
        android:textColor="@color/input_text_color"
        android:textSize="@dimen/verify_dialog_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium_high"
        android:text="@string/account_created_body_text"
        android:textColor="@color/input_hint_color"
        android:textSize="@dimen/verify_dialog_body_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_width"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/banner_stroke_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body" />

    <TextView
        android:id="@+id/ok_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_medium_small"
        android:paddingVertical="@dimen/spacing_medium"
        android:text="@string/continue_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/input_text_color"
        android:textSize="@dimen/verify_dialog_action_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

</androidx.constraintlayout.widget.ConstraintLayout>